# app/Swagger/Models/StockSoftware.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Swagger\Models;
+
+
+class StockSoftware
+{
+    // Ce fichier ne contient que la définition du schéma pour Swagger
+}
