# routes/api.php
@@ -2,7 +2,11 @@
 
 use Illuminate\Support\Facades\Route;
 
-// Inclusion des routes spécifiques à CustomerStatus
 Route::prefix('customer-statuses')->group(function () {
     require __DIR__.'/api/customer_status.php';
 });
+
+Route::prefix('stock-softwares')->group(function () {
+    require __DIR__.'/api/stock_software.php';
+});
+
